--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+      <title>four app</title>
       <div id = "box">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" href="index.css">
@@ -45,13 +46,15 @@
             Allow your shopperss to pay over time while you <br>
              get paid today, risk free!
           </span>
-          <form class="d-flex">
+          <form1 class="d-flex">
           <input  type="search" id = "app2" placeholder="Your email address" aria-label="Search">
           <button type="submit" id = "app3">GetStarted</button>
-        </form>
+        </form1>
+        <div id = app11>
         <span >created for:</span> <br>
         <span style="font-family: Comic Sans MS;"> shopify <span style="padding-left: 40px;"> shopify </span><span style="font-family: 'Times New Roman', Times, serif;">plus </span></span>
-        </div>
+      </div>  
+      </div>
        <div style="background-color:aquamarine;">
           <div id ="app5">
           <label>What we can do <br>
