--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"> <span class="navbar-brand"> hello</span> four </a>
+          <a class="navbar-brand" href="#"> <span class="navbar-brand"></span> four </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
