--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <html>
     <head>
       <title>four app</title>
-      
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script>
-$(window).on('load resize', function(){
-  var width = $(window).width(); 
-$("#box").width(width);
-});
-</script>
-      <div id = "box">
+      <meta charset="box">
+       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <div id ="box">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" href="index.css">
     </head>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-           four   </a>
+          <a class="navbar-brand" href="#" >
+          <span style="margin-left: 50px;"> four  </span>
+            </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -68,29 +63,30 @@ $("#box").width(width);
           </label>
         </div>
           <div id = "app6">
-          <img align = "right" src="http://via.placeholder.com/300" width="240" height="300">
-          <img align = "center" src="http://via.placeholder.com/300" width="240" height="300" >
-          <img align = "left" src="http://via.placeholder.com/300" width="240" height="300" >
+          <img align = "right" src="http://via.placeholder.com/300" width=300" height="300">
+          <img style="align-content: center;"    src="http://via.placeholder.com/300" width="300" height="300" >
+          <img align = "left" src="http://via.placeholder.com/300" width="300" height="300" 
+          >
+        </div>
           <div id = app7>
           <span align = "left" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 50px;">Boost card sizes</span>
-          <span align = "center" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 50px;padding-left: 200px;">increase</span>
-          <span align = "right" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 50px;padding-left: 280px;">Reduce cart</span>
+          <span align = "center" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 50px;padding-left: 250px;">increase</span>
+          <span align = "right" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 50px;padding-left: 330px;">Reduce cart</span>
       </div>
-      <div id = app8>
-        <span align = "center" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 100px;padding-left: 350px;">Convertion Rate</span>
-          <span align = "right" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 50px;padding-left: 210px;">Abandonment</span>
+      <div id = app8>  
+        <span align = "center" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 100px;padding-left: 520px;">Convertion Rate</span>
+          <span align = "right" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 50px;padding-left: 260px;">Abandonment</span>
       </div>
       <div id = app9>
         <span align = "left" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 100px;">life your average order value by as <br> much as 60%</span>
-          <span align = "center" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 50px;padding-left: 250px;">30% lift in conversion rate</span>
-          <span align = "right" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 50px;padding-left: 160px;">Give your shoppers the ability to buy <br>
-            <span align = "right" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-left: 710px;"> your products now</span>  </span>
+          <span align = "center" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 50px;padding-left: 300px;">30% lift in conversion rate</span>
+          <span align = "right" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 50px;padding-left: 210px;">Give your shoppers the ability to buy <br>
+            <span align = "right" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-left: 810px;"> your products now</span>  </span>
  
       </div>
       <div id="app10">
           <span align = "right" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-left: 710px;"></span>
       </div>
-        </div>
       </body>
     </div>
   </div>
