--- a/index.html
+++ b/index.html
@@ -1,22 +1,12 @@
 <html>
     <head>
       <title>four app</title>
+      <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1">
-       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
-       $(document).ready(function(){
-    $(window).resize();
-});
-$(window).resize(function{
-    // your code
-    var windowWidth=$(window).width();
-    var mainContainerWidth=windowWidth-100; // For example
-    $("#box").css({"width":mainContainerWidth+"px"});
-});
-      </script>
-      <div id ="box">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" href="index.css">
-    </head>
+      </head>
+      <div id ="screen">
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
           <a class="navbar-brand" href="#" >
@@ -73,10 +63,10 @@ $(window).resize(function{
           </label>
         </div>
           <div id = "app6">
-          <img align = "right" src="http://via.placeholder.com/300" width=300" height="300">
-          <img style="align-content: center;"    src="http://via.placeholder.com/300" width="300" height="300" >
-          <img align = "left" src="http://via.placeholder.com/300" width="300" height="300" 
-          >
+          <img  src="http://via.placeholder.com/300" width=300" height="300">
+         <span><img    src="http://via.placeholder.com/300" width="300" height="300" ></span> 
+        <span>  <img  src="http://via.placeholder.com/300" width="300" height="300"> </span>
+      
         </div>
           <div id = app7>
           <span align = "left" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 50px;">Boost card sizes</span>
