--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
       <title>four app</title>
-      <meta charset="utf-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1">
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="index.css">
+       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+       <link rel="stylesheet" href="index.css">
       </head>
       <div id ="screen">
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
@@ -12,7 +12,10 @@
           <a class="navbar-brand" href="#" >
           <span style="margin-left: 50px;"> four  </span>
             </a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <button style="margin-right: 30px;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Shop</a>
@@ -30,7 +33,7 @@
             <form class="d-flex">
                 <label>signin </label>
               <input type="search" placeholder="Your email address" aria-label="Search">
-              <button type="submit">SignUp</button>
+              <button type="submit" style="margin-right: 60px;">SignUp</button>
             </form>
           </div>
         </div>
@@ -66,26 +69,24 @@
           <img  src="http://via.placeholder.com/300" width=300" height="300">
          <span><img    src="http://via.placeholder.com/300" width="300" height="300" ></span> 
         <span>  <img  src="http://via.placeholder.com/300" width="300" height="300"> </span>
-      
         </div>
-          <div id = app7>
-          <span align = "left" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 50px;">Boost card sizes</span>
-          <span align = "center" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 50px;padding-left: 250px;">increase</span>
-          <span align = "right" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 50px;padding-left: 330px;">Reduce cart</span>
-      </div>
-      <div id = app8>  
-        <span align = "center" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 100px;padding-left: 520px;">Convertion Rate</span>
-          <span align = "right" style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;padding-top: 50px;padding-left: 260px;">Abandonment</span>
-      </div>
-      <div id = app9>
-        <span align = "left" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 100px;">life your average order value by as <br> much as 60%</span>
-          <span align = "center" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 50px;padding-left: 300px;">30% lift in conversion rate</span>
-          <span align = "right" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 50px;padding-left: 210px;">Give your shoppers the ability to buy <br>
-            <span align = "right" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-left: 810px;"> your products now</span>  </span>
- 
-      </div>
+        <div class="row justify-content-center" style="margin-top: 40px;margin-left: 120px;">
+          <div class="col-4">
+            <span  style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;">Boost card sizes</span>
+            <p  style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 15px;">life your average order value by as <br> much as 60%</p>
+          </div>
+          <div class="col-4">
+            <span  style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;">increase <br> convertion Rate </span> <br>
+           <p style="font-size: 18px;font-family: 'Times New Roman', Times, serif;serif;padding-top: 15px;"> 30% lift in conversion rate </p>
+          </div>
+          <div class="col-4">
+            <span  style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;">Reduce card <br> Abandonment</span> <br>
+           <p  style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 15px;"> Give your shoppers the ablity to buy <br> your products now </p>
+           </div>
+          </div>  
       <div id="app10">
           <span align = "right" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-left: 710px;"></span>
+      </div>
       </div>
       </body>
     </div>
