--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
        <link rel="stylesheet" href="index.css">
       </head>
-      <div id ="screen">
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <div class = "example">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#" >
-          <span style="margin-left: 50px;"> four  </span>
+           <img src="http://via.placeholder.com/120x50"  width="50" height="20" class="d-inline-block">   four 
             </a>
             <button style="margin-right: 30px;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,9 @@
         </div>
       </nav>
       <body>
+        <div id = "add">
              <img align = "right" src="http://via.placeholder.com/400x600" width="400" height="600" >
+            </div>
           <div id ="app">
         <label>Sell more <br>
          <span style="font-family: Comic Sans MS;"> With Four.</span>
@@ -52,7 +54,7 @@
           </span>
           <form1 class="d-flex">
           <input  type="search" id = "app2" placeholder="Your email address" aria-label="Search">
-          <button type="submit" id = "app3">GetStarted</button>
+          <button type="submit" id = "app3">Get Started</button>
         </form1>
         <div id = app11>
         <span >created for:</span> <br>
@@ -65,19 +67,19 @@
            <span style="font-family: Comic Sans MS;"> just for you.</span>
           </label>
         </div>
-          <div id = "app6">
-          <img  src="http://via.placeholder.com/300" width=300" height="300">
-         <span><img    src="http://via.placeholder.com/300" width="300" height="300" ></span> 
-        <span>  <img  src="http://via.placeholder.com/300" width="300" height="300"> </span>
+          <div  class="row" style="margin-top: 60px;margin-left: 70px;padding-right: 70px;padding-left: 50px;" >
+            <div class="col"> <img  src="http://via.placeholder.com/300" width="300" height="300"></div>
+              <div class="col"> <img    src="http://via.placeholder.com/300" width="300" height="300" ></div>
+                <div class="col"> <img  src="http://via.placeholder.com/300" width="300" height="300"> </div>
         </div>
-        <div class="row justify-content-center" style="margin-top: 40px;margin-left: 120px;">
+        <div class="row justify-content-center" style="margin-top: 60px;margin-left: 70px;padding-right: 70px;padding-left: 50px;" >
           <div class="col-4">
             <span  style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;">Boost card sizes</span>
             <p  style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 15px;">life your average order value by as <br> much as 60%</p>
           </div>
           <div class="col-4">
             <span  style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;">increase <br> convertion Rate </span> <br>
-           <p style="font-size: 18px;font-family: 'Times New Roman', Times, serif;serif;padding-top: 15px;"> 30% lift in conversion rate </p>
+           <p style="font-size: 18px;font-family: 'Times New Roman', 'Times, serif;serif';padding-top: 15px;"> 30% lift in conversion rate </p>
           </div>
           <div class="col-4">
             <span  style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;">Reduce card <br> Abandonment</span> <br>
