--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        <link rel="stylesheet" href="index.css">
       </head>
       <div class = "example">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
           <a class="navbar-brand" href="#" >
            <img src="http://via.placeholder.com/120x50"  width="50" height="20" class="d-inline-block">   four 
