--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
     <head>
       <title>four app</title>
@@ -68,24 +69,19 @@
           </label>
         </div>
           <div  class="row" style="margin-top: 60px;margin-left: 70px;padding-right: 70px;padding-left: 50px;" >
-            <div class="col"> <img  src="http://via.placeholder.com/300" width="300" height="300"></div>
-              <div class="col"> <img    src="http://via.placeholder.com/300" width="300" height="300" ></div>
-                <div class="col"> <img  src="http://via.placeholder.com/300" width="300" height="300"> </div>
-        </div>
-        <div class="row justify-content-center" style="margin-top: 60px;margin-left: 70px;padding-right: 70px;padding-left: 50px;" >
-          <div class="col-4">
-            <span  style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;">Boost card sizes</span>
-            <p  style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 15px;">life your average order value by as <br> much as 60%</p>
-          </div>
-          <div class="col-4">
-            <span  style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;">increase <br> convertion Rate </span> <br>
-           <p style="font-size: 18px;font-family: 'Times New Roman', 'Times, serif;serif';padding-top: 15px;"> 30% lift in conversion rate </p>
-          </div>
-          <div class="col-4">
-            <span  style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;">Reduce card <br> Abandonment</span> <br>
-           <p  style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 15px;"> Give your shoppers the ablity to buy <br> your products now </p>
-           </div>
-          </div>  
+            <div class="col"> <img  src="http://via.placeholder.com/300" width="300" height="300"> <br>
+              <div  style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;margin-top: 20px;">Boost card sizes
+              <p  style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 15px;">life your average order value by as <br> much as 60%</p> </div>
+            </div>
+              <div class="col"> <img    src="http://via.placeholder.com/300" width="300" height="300" > <br>
+                <div  style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;margin-top: 20px;">increase <br> convertion Rate <br>
+                <p style="font-size: 18px;font-family: 'Times New Roman', 'Times, serif;serif';padding-top: 15px;"> 30% lift in conversion rate </p> </div> 
+              </div>
+                <div class="col"> <img  src="http://via.placeholder.com/300" width="300" height="300"> <br>
+                  <div  style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;margin-top: 20px;">Reduce card <br> Abandonment  <br>
+                  <p  style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-top: 15px;"> Give your shoppers the ablity to buy <br> your products now </p> </div>
+                </div>
+        </div> 
       <div id="app10">
           <span align = "right" style="font-size: 18px;font-family: 'Times New Roman', Times, serif;padding-left: 710px;"></span>
       </div>
